updating index and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Day 7 Homework</title>
 </head>
 <body>
-    <h1> hello world</h1>
+    <div>
+        <div class="column" id="left">Column 1</div>
+        <div class="column" id="middle">Column 2</div>
+        <div class="column" id="right">Column 3</div>
+    </div>
 </body>
 </html>
