--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Day 7 Homework</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <div class="column" id="left">Column 1</div>
-        <div class="column" id="middle">Column 2</div>
-        <div class="column" id="right">Column 3</div>
+      <div class="column" id="left">Column 1</div>
+      <div class="column" id="middle">Column 2</div>
+      <div class="column" id="right">Column 3</div>
     </div>
-</body>
+    <h1>Added test Branch</h1>
+  </body>
 </html>
